# WASAPI-GetMixFormat

./: CMakeLists.txt  COM.cpp  COM.hpp  Endpoint.cpp  Endpoint.hpp  Enumerator.cpp  Enumerator.hpp  LICENSE  README.md  main.cpp
